# autoware.universe

common/tartan_utils/: CMakeLists.txt  package.xml
common/tartan_utils/include/tartan_utils/: point_type_converter.hpp
common/tartan_utils/src/: point_type_converter.cpp
launch/tier4_perception_launch/launch/: perception.launch.xml
launch/tier4_perception_launch/launch/object_recognition/detection/detector/: camera_lidar_detector.launch.xml  lidar_dnn_detector.launch.xml
launch/tier4_perception_launch/launch/object_recognition/detection/merger/: camera_lidar_merger.launch.xml
perception/tensorrt_yolox/launch/: multiple_yolox.launch.xml  yolox_s_plus_opt.launch.xml
